--- a/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
+++ b/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
@@ -45,19 +45,28 @@
     <Compile Include="Model\Cargos\Cargo.cs" />
     <Compile Include="Model\Cargos\Delivery.cs" />
     <Compile Include="Model\Cargos\HandlingActivity.cs" />
+    <Compile Include="Model\Cargos\ICargoRepository.cs" />
     <Compile Include="Model\Cargos\Itinerary.cs" />
     <Compile Include="Model\Cargos\Leg.cs" />
     <Compile Include="Model\Cargos\RouteSpecification.cs" />
     <Compile Include="Model\Cargos\RoutingStatus.cs" />
     <Compile Include="Model\Cargos\TrackingId.cs" />
     <Compile Include="Model\Cargos\TransportStatus.cs" />
+    <Compile Include="Model\Handlings\CannotCreateHandlingEventException.cs" />
     <Compile Include="Model\Handlings\HandlingEvent.cs" />
+    <Compile Include="Model\Handlings\HandlingEventFactory.cs" />
     <Compile Include="Model\Handlings\HandlingHistory.cs" />
+    <Compile Include="Model\Handlings\IHandlingEventRepository.cs" />
+    <Compile Include="Model\Handlings\UnknownCargoException.cs" />
+    <Compile Include="Model\Handlings\UnknownLocationException.cs" />
+    <Compile Include="Model\Handlings\UnknownVoyageException.cs" />
     <Compile Include="Model\Locations\Location.cs" />
     <Compile Include="Model\Locations\ILocationRepository.cs" />
     <Compile Include="Model\Locations\SampleLocations.cs" />
     <Compile Include="Model\Locations\UnLocode.cs" />
     <Compile Include="Model\Voyages\CarrierMovement.cs" />
+    <Compile Include="Model\Voyages\IVoyageRepository.cs" />
+    <Compile Include="Model\Voyages\SampleVoyages.cs" />
     <Compile Include="_TempHelper\EqualsBuilder.cs" />
     <Compile Include="Model\Voyages\Schedule.cs" />
     <Compile Include="Model\Voyages\Voyage.cs" />
