--- a/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
+++ b/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Model\Voyages\Voyage.cs" />
     <Compile Include="Model\Voyages\VoyageNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IRoutingService.cs" />
     <Compile Include="Shared\AbstractSpecification.cs" />
     <Compile Include="Shared\AndSpecification.cs" />
     <Compile Include="Shared\DomainObjectUtils.cs" />
@@ -89,9 +90,6 @@
     <None Include="..\..\..\..\NDDDSample.snk">
       <Link>Properties\NDDDSample.snk</Link>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
