--- a/src/app/interfaces/NDDDSample.Interfaces/NDDDSample.Interfaces.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces/NDDDSample.Interfaces.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{85016CA7-7628-4E77-8E8B-65FD22ED57B9}</ProjectGuid>
+    <ProjectGuid>{BDA5AFA5-0114-4C4C-989E-29457FAA4FDF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NDDDSample.Tests</RootNamespace>
-    <AssemblyName>NDDDSample.Tests</AssemblyName>
+    <RootNamespace>NDDDSample.Interfaces</RootNamespace>
+    <AssemblyName>NDDDSample.Interfaces</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\tools\NUnit\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -51,19 +47,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\JavaRelated\EqualsBuilderTest.cs" />
-    <Compile Include="Domain\JavaRelated\HashCodeBuilderTest.cs" />
-    <Compile Include="Scenarios\CargoLifecycleScenarioTest.cs" />
+    <Compile Include="Handlings\HandlingEventRegistrationAttempt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\NDDDSample.snk" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\app\domain\NDDDSample.Domain\NDDDSample.Domain.csproj">
+    <ProjectReference Include="..\..\domain\NDDDSample.Domain\NDDDSample.Domain.csproj">
       <Project>{A57A3967-E613-4598-94FF-BD55711D4CAD}</Project>
       <Name>NDDDSample.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Bookings\Facade\Dto\" />
+    <Folder Include="Bookings\Facade\Internal\Assembler\" />
+    <Folder Include="Bookings\Web\" />
+    <Folder Include="Handlings\File\" />
+    <Folder Include="Handlings\WS\" />
+    <Folder Include="Trackings\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
