Porting CargoLifecycleScenarioTest: TEST IS GREEN!!!
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@34 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/test/NDDDSample.Tests/NDDDSample.Tests.csproj
+++ b/src/test/NDDDSample.Tests/NDDDSample.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Domain\JavaRelated\EqualsBuilderTest.cs" />
     <Compile Include="Domain\JavaRelated\HashCodeBuilderTest.cs" />
+    <Compile Include="Domain\JavaRelated\ToStringBuilderTest.cs" />
     <Compile Include="Infrastructure\Messaging\Stub\SynchronousApplicationEventsStub.cs" />
     <Compile Include="Infrastructure\Persistence\Inmemory\CargoRepositoryInMem.cs" />
     <Compile Include="Infrastructure\Persistence\Inmemory\HandlingEventRepositoryInMem.cs" />
