--- a/src/app/infrastructure/NDDDSample.Persistence.NHibernate/NDDDSample.Persistence.NHibernate.csproj
+++ b/src/app/infrastructure/NDDDSample.Persistence.NHibernate/NDDDSample.Persistence.NHibernate.csproj
@@ -33,9 +33,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NHibernate, Version=2.0.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+    <Reference Include="NHibernate, Version=2.1.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\lib\NHibernate\NHibernate.dll</HintPath>
+      <HintPath>..\..\..\..\lib\Rhino\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Commons.NHibernate, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\lib\Rhino\Rhino.Commons.NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -62,7 +66,7 @@
     <None Include="Properties\NDDDSample.snk" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="ModelMappings\Cargo.hbm.xml" />
+    <Content Include="ModelMappings\Cargo.hbm.xml" />
     <EmbeddedResource Include="ModelMappings\CarrierMovement.hbm.xml" />
     <EmbeddedResource Include="ModelMappings\HandlingEvent.hbm.xml" />
     <EmbeddedResource Include="ModelMappings\Leg.hbm.xml" />
