NHibernate Repository Tests migragion: work in progress -Enum Type Converters are added
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@46 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
+++ b/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Shared\AbstractSpecification.cs" />
     <Compile Include="Shared\AndSpecification.cs" />
     <Compile Include="Shared\DomainObjectUtils.cs" />
+    <Compile Include="Shared\Enumeration.cs" />
     <Compile Include="Shared\IDomainEvent.cs" />
     <Compile Include="Shared\IEntity.cs" />
     <Compile Include="Shared\ISpecification.cs" />
