--- a/src/app/infrastructure/NDDDSample.Persistence.NHibernate/NDDDSample.Persistence.NHibernate.csproj
+++ b/src/app/infrastructure/NDDDSample.Persistence.NHibernate/NDDDSample.Persistence.NHibernate.csproj
@@ -56,17 +56,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CargoRepositoryHibernate.cs" />
+    <Compile Include="EnumerationTypeConverter.cs" />
     <Compile Include="HandlingEventRepositoryHibernate.cs" />
     <Compile Include="HibernateRepository.cs" />
     <Compile Include="LocationRepositoryHibernate.cs" />
+    <Compile Include="HandlingTypeConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoutingStatusConverter.cs" />
+    <Compile Include="TransportStatusConverter.cs" />
     <Compile Include="VoyageRepositoryHibernate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\NDDDSample.snk" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ModelMappings\Cargo.hbm.xml" />
+    <EmbeddedResource Include="ModelMappings\Cargo.hbm.xml" />
     <EmbeddedResource Include="ModelMappings\CarrierMovement.hbm.xml" />
     <EmbeddedResource Include="ModelMappings\HandlingEvent.hbm.xml" />
     <EmbeddedResource Include="ModelMappings\Leg.hbm.xml" />
