NHibernate Repository Tests migragion: work in progress -HandlingType is moved in outerscope from nested type
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@47 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
+++ b/src/app/domain/NDDDSample.Domain/NDDDSample.Domain.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Model\Handlings\HandlingEvent.cs" />
     <Compile Include="Model\Handlings\HandlingEventFactory.cs" />
     <Compile Include="Model\Handlings\HandlingHistory.cs" />
+    <Compile Include="Model\Handlings\HandlingType.cs" />
     <Compile Include="Model\Handlings\IHandlingEventRepository.cs" />
     <Compile Include="Model\Handlings\UnknownCargoException.cs" />
     <Compile Include="Model\Handlings\UnknownLocationException.cs" />
