--- a/src/test/NDDDSample.Tests/NDDDSample.Tests.csproj
+++ b/src/test/NDDDSample.Tests/NDDDSample.Tests.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NHibernate, Version=2.1.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\Rhino\NHibernate.dll</HintPath>
+    </Reference>
     <Reference Include="NHibernate.ByteCode.Castle, Version=2.1.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\Rhino\NHibernate.ByteCode.Castle.dll</HintPath>
@@ -72,6 +76,9 @@
     <Compile Include="Infrastructure\Persistence\Inmemory\LocationRepositoryInMem.cs" />
     <Compile Include="Infrastructure\Persistence\Inmemory\VoyageRepositoryInMem.cs" />
     <Compile Include="Infrastructure\Persistence\NHibernate\BaseRepositoryTest.cs" />
+    <Compile Include="Infrastructure\Persistence\NHibernate\CargoRepositoryTest.cs" />
+    <Compile Include="Infrastructure\Persistence\NHibernate\CarrierMovementRepositoryTest.cs" />
+    <Compile Include="Infrastructure\Persistence\NHibernate\HandlingEventRepositoryTest.cs" />
     <Compile Include="Infrastructure\Persistence\NHibernate\LocationRepositoryTest.cs" />
     <Compile Include="Scenarios\CargoLifecycleScenarioTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
