--- a/src/test/NDDDSample.Tests/NDDDSample.Tests.csproj
+++ b/src/test/NDDDSample.Tests/NDDDSample.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Domain\JavaRelated\EqualsBuilderTest.cs" />
     <Compile Include="Domain\JavaRelated\HashCodeBuilderTest.cs" />
     <Compile Include="Domain\JavaRelated\ToStringBuilderTest.cs" />
+    <Compile Include="Domain\Model\Cargos\TrackingIdTest.cs" />
     <Compile Include="Infrastructure\Messaging\Stub\SynchronousApplicationEventsStub.cs" />
     <Compile Include="Infrastructure\Persistence\Inmemory\CargoRepositoryInMem.cs" />
     <Compile Include="Infrastructure\Persistence\Inmemory\HandlingEventRepositoryInMem.cs" />
@@ -114,6 +115,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Domain\Model\Handlings\" />
+    <Folder Include="Domain\Model\Locations\" />
+    <Folder Include="Domain\Model\Voyages\" />
     <Folder Include="Infrastructure\Routing\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
