Booking Service interface bay naming convetion
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@65 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/interfaces/NDDDSample.Interfaces/NDDDSample.Interfaces.csproj
+++ b/src/app/interfaces/NDDDSample.Interfaces/NDDDSample.Interfaces.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bookings\Facade\BookingServiceFacade.cs" />
+    <Compile Include="Bookings\Facade\IBookingServiceFacade.cs" />
     <Compile Include="Bookings\Facade\Dto\CargoRoutingDTO.cs" />
     <Compile Include="Bookings\Facade\Dto\LegDTO.cs" />
     <Compile Include="Bookings\Facade\Dto\LocationDTO.cs" />
